simple cards gap fix

--- a/src/components/SimpleCard/styles.module.scss
+++ b/src/components/SimpleCard/styles.module.scss
@@ -1,10 +1,16 @@
 .card {
-  @apply rounded-3xl overflow-hidden relative;
+  @apply rounded-3xl overflow-hidden relative font-semibold text-xl bg-white w-full; 
   min-height: 19rem;
   box-shadow: 0px 6.15603px 30.7801px rgba(132, 145, 170, 0.19);
-  font-size: 20px;
-  font-weight: 600;
-  width: 376px;
+  max-width: 376px;
+
+  @media (min-width: 768px) {
+    width: calc(50% - 2.5rem);
+  }
+
+  @media (min-width: 1024px) {
+    width: calc(25% - 2.5rem);
+  }
 }
 
 .content {
