--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -44,7 +44,7 @@
 }
 
 .cardsConteiner {
-  @apply flex justify-evenly flex-wrap mt-16;
+  @apply flex justify-evenly flex-wrap mt-16 gap-10;
 }
 
 .staffSection {
